fixed home page list to align text. fixed nav bar jumping around when nav item clicked

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ html {
 
 body {
   min-height: 100vh;
+  min-width: 100vw;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   font-family: 'Happy Monkey';
